# My-Bank

./: .coverage  .gitignore  README.md  READMY.md  _README.md  main.py  mybank.env  operations.py  pyproject.toml
_tests/: test_operations.py
docs/: README.md
dump/: _freader_log.py  _test_utils_new.py  sort_data.py  tes_freader_log.py  tes_masks.py
dump py/: test_masks.py  test_utils_new.py
htmlcov/: class_index.html  function_index.html  index.html  main_py.html  operations_py.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_code_py.html  z_145eef247bfb46b6_conftest_py.html  z_145eef247bfb46b6_freader_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_input_data_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_masks__py.html  z_145eef247bfb46b6_operations_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_reader_data_py.html  z_145eef247bfb46b6_reformat_rec_py.html  z_145eef247bfb46b6_sort_data_py.html  z_145eef247bfb46b6_transform_data_py.html  z_145eef247bfb46b6_widget_py.html  z_15c4a824ab2728a3_main_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_main_py.html  z_a44f0ac069e85531_test_operations_py.html
main/: main.py
project/: pyproject.toml
project/src/: main.py  masks.py  widget.py
src/: _code.py  code.py  external_api.py  freader.py  generators.py  input_data.py  main.py  masks.py  masks_new.py  operations.py  processing.py  reader.py  reader_data.py  reformat_rec.py  sort_data.py  test_log.txt  transform_data.py  utils.py  (+2 more)
(+61 files in other folders)
