[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexShcherb1173",email = "Alex_181173@list.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
